--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.6.0",
     "@microsoft/decorators": "1.6.0",
-    "@types/webpack-env": "1.13.1",
-    "@types/es6-promise": "0.0.33",
+    "@microsoft/sp-application-base": "1.6.0",
+    "@microsoft/sp-core-library": "1.6.0",
     "@microsoft/sp-dialog": "1.6.0",
-    "@microsoft/sp-application-base": "1.6.0"
+    "@types/es6-promise": "0.0.33",
+    "@types/webpack-env": "1.13.1",
+    "office-ui-fabric-react": "^5.0.0",
+    "react": "15.6.2",
+    "react-dom": "15.6.2"
   },
   "devDependencies": {
     "@microsoft/sp-build-web": "1.6.0",
